# coloredstrings

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
examples/: common_features.py  patched_str.py  preview.py  yachalk_bug.py
scripts/: run-mypy
src/coloredstrings/: __init__.py  __main__.py  ansi_conversions.py  color_support.py  colors.py  core.py  patch.py  style.py  style_builder.py  stylize.py  types.py  utils.py
tests/: ascii_codes.py  test_ansi_conversions.py  test_chalk.py  test_color_support.py  test_coloredstrings.py  test_context.py  test_global_patch.py  test_patched_str.py  test_utils.py
