[project]
name = "coloredstrings"
version = "2.0.2"
description = "Colorize Different."
readme = "README.md"
authors = [
    { name = "samedit66", email = "samedit66@yandex.ru" }
]
maintainers = [
    { name = "samedit66", email = "samedit66@yandex.ru" }
]
license-files = ["LICEN[CS]E*"]
keywords = ["ansi", "color", "colour", "crossplatform", "terminal", "text"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/samedit66/coloredstrings"
"Repository" = "https://github.com/samedit66/coloredstrings"
"Bug Tracker" = "https://github.com/samedit66/coloredstrings/issues"
"Documentation" = "https://github.com/samedit66/coloredstrings#readme"
"Changelog" = "https://github.com/samedit66/coloredstrings/releases"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
patched = [
    "forbiddenfruit>=0.1.4",
]
